hphp/test/zend/bad/tests/classes/factory_and_singleton_006.php
<?php
class test {

  private function __destruct() {
  }
}

$obj = new test;
$obj = NULL;

echo "Done\n";
?>